# pi-cluster-monitor

./: Cargo.toml  Makefile  README.md  plan-bundling.md  plan.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  main.yml  release-pi-agent.yml  release-pi-monitor.yml  release.yml
Formula/: pi-monitor.rb  pi-monitor.rb.tmpl
ansible/: deploy.yml  inventory.example.yml
ansible/roles/pi-agent/defaults/: main.yml
ansible/roles/pi-agent/tasks/: main.yml
pi-agent/: Cargo.toml  Makefile
pi-agent/debian/: pi-agent.service
pi-agent/src/: collector.rs  main.rs  routes.rs  types.rs
pi-monitor/: Cargo.toml  Makefile
pi-monitor/src/: app.rs  inventory.rs  main.rs
pi-monitor/src/collector/: hailo.rs  mod.rs  network.rs  node_agent.rs  raspi_dash.rs  system.rs
pi-monitor/src/ui/: mod.rs  network.rs  overview.rs  processes.rs  statusbar.rs  stubs.rs  system.rs
