[package]
name = "pi-agent"
version = "0.1.0"
edition = "2024"
description = "HTTP agent exposing system metrics for the Pi Cluster Monitor TUI"
authors = ["Edward Sumeriski <esumerfd@gmail.com>"]

[package.metadata.dist]
dist = false

[package.metadata.deb]
maintainer = "Edward Sumeriski <esumerfd@gmail.com>"
copyright = "2026, Edward Sumeriski"
extended-description = "Lightweight HTTP server that exposes CPU, memory, disk, thermal, and Hailo NPU metrics for the Pi Cluster Monitor TUI dashboard."
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = true }

[[bin]]
name = "pi-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
