[package]
name = "pi-monitor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/esumerfd/pi-cluster-monitor"

[[bin]]
name = "pi-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
